fix: Wrapping long lines

--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -116,8 +116,6 @@ a {
   text-decoration: underline;
   text-underline-offset: calc(var(--d) * 1.8);
   overflow-wrap: break-word;
-  word-wrap: break-word;
-  word-break: break-word;
   hyphens: auto;
 }
 
@@ -343,6 +341,8 @@ cite *,
 code {
   font-size: calc(var(--d) * 4);
   line-height: 1.6;
+  overflow-wrap: break-word;
+  hyphens: auto;
 }
 
 nav * {
